opam-version: "2.0"
version: "0.0"
synopsis: "Extensions to OCaml's Stdlib"
maintainer: "Vesa Karvonen <vesa.a.j.k@gmail.com>"
authors: "Vesa Karvonen"
license: "MIT"
homepage: "https://github.com/polytypic/StdlibPlus"
bug-reports: "https://github.com/polytypic/StdlibPlus/issues"
dev-repo: "git+https://github.com/polytypic/StdlibPlus.git"
depends: [
  "dune" {>= "3.3.0"}
  "ocaml" {>= "4.14.1"}
  "rea" {>= "1.0.0"}
  "odoc" {>= "2.1.1" & with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs]
